[gd_scene load_steps=4 format=3 uid="uid://c3j5mrsqd7dx4"]

[ext_resource type="Script" path="res://levels/level/level_generator.gd" id="1_ldo62"]
[ext_resource type="PackedScene" uid="uid://bms5g4bovbhjq" path="res://world/water/water.tscn" id="2_ahgdf"]
[ext_resource type="Texture2D" uid="uid://bjtf15xxvv3oe" path="res://misc/edge_h.svg" id="3_owqod"]

[node name="Level" type="Node2D"]
script = ExtResource("1_ldo62")

[node name="Base" type="Node2D" parent="."]

[node name="WaterLeft" parent="Base" instance=ExtResource("2_ahgdf")]

[node name="WaterRight" parent="Base" instance=ExtResource("2_ahgdf")]

[node name="PolygonGround" type="Polygon2D" parent="Base"]
self_modulate = Color(0.243137, 0.537255, 0.282353, 1)
z_index = -4000

[node name="EdgeLeft" type="Line2D" parent="Base"]
self_modulate = Color(0.14902, 0.360784, 0.258824, 1)
z_index = 4000
points = PackedVector2Array(-1932, -236, -2283, 42, -2102, 1116, -1479, 1484, -405, 1478)
width = 500.0
texture = ExtResource("3_owqod")
texture_mode = 1
antialiased = true

[node name="EdgeRight" type="Line2D" parent="Base"]
self_modulate = Color(0.14902, 0.360784, 0.258824, 1)
z_index = 4000
points = PackedVector2Array(-1932, -236, -2283, 42, -2102, 1116, -1479, 1484, -405, 1478)
width = 500.0
texture = ExtResource("3_owqod")
texture_mode = 1
antialiased = true

[editable path="Base/WaterLeft"]
[editable path="Base/WaterRight"]
